// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<RenderLinkAnnotation /> matches snapshot 1`] = `
<DocumentFragment>
  <a
    class="components-label components-label-with-hover badge border components-grid-annotation-link"
    href="http://localhost/foo"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-up-right-from-square"
      data-icon="up-right-from-square"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M290.4 19.8C295.4 7.8 307.1 0 320 0L480 0c17.7 0 32 14.3 32 32l0 160c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9L400 157.3 246.6 310.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L354.7 112 297.4 54.6c-9.2-9.2-11.9-22.9-6.9-34.9zM0 176c0-44.2 35.8-80 80-80l80 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-80 0c-8.8 0-16 7.2-16 16l0 256c0 8.8 7.2 16 16 16l256 0c8.8 0 16-7.2 16-16l0-80c0-17.7 14.3-32 32-32s32 14.3 32 32l0 80c0 44.2-35.8 80-80 80L80 512c-44.2 0-80-35.8-80-80L0 176z"
        fill="currentColor"
      />
    </svg>
     annotation name
  </a>
</DocumentFragment>
`;

exports[`<RenderNonLinkAnnotation /> matches snapshot when visible=false 1`] = `
<DocumentFragment>
  <div
    class=" tooltip-trigger"
  >
    <div
      class="mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100 cursor-pointer"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-angle-left me-1"
        data-icon="angle-left"
        data-prefix="fas"
        role="img"
        viewBox="0 0 256 512"
      >
        <path
          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
          fill="currentColor"
        />
      </svg>
      foo
    </div>
  </div>
</DocumentFragment>
`;

exports[`<RenderNonLinkAnnotation /> matches snapshot when visible=true 1`] = `
<DocumentFragment>
  <div
    class=" tooltip-trigger"
  >
    <div
      class="mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100"
    >
      <span
        class="cursor-pointer"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-right me-1 text-muted"
          data-icon="angle-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 256 512"
        >
          <path
            d="M247.1 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L179.2 256 41.9 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"
            fill="currentColor"
          />
        </svg>
        <span
          class="text-muted"
        >
          foo: 
        </span>
      </span>
      <span
        class="Linkify"
      >
        <span>
          some long text
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
